; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_sdio_intr_host.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_sdio_intr_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_7__, %struct.TYPE_6__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_9__ = type { i32*, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 (i32)* }

@SLC = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@pdFALSE = common dso_local global i64 0, align 8
@context = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @sdio_intr_host to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdio_intr_host(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @SLC, i32 0, i32 1, i32 0), align 4
  %7 = and i32 %6, 255
  store i32 %7, i32* %3, align 4
  %8 = load i64, i64* @pdFALSE, align 8
  store i64 %8, i64* %4, align 8
  %9 = load i32, i32* %3, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @SLC, i32 0, i32 0, i32 0), align 4
  store i32 0, i32* %5, align 4
  br label %10

10:                                               ; preds = %34, %1
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 8
  br i1 %12, label %13, label %37

13:                                               ; preds = %10
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @BIT(i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %33

19:                                               ; preds = %13
  %20 = load i32 (i32)*, i32 (i32)** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @context, i32 0, i32 1, i32 0), align 8
  %21 = icmp ne i32 (i32)* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %19
  %23 = load i32 (i32)*, i32 (i32)** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @context, i32 0, i32 1, i32 0), align 8
  %24 = load i32, i32* %5, align 4
  %25 = call i32 %23(i32 %24)
  br label %26

26:                                               ; preds = %22, %19
  %27 = load i32*, i32** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @context, i32 0, i32 0), align 8
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @xSemaphoreGiveFromISR(i32 %31, i64* %4)
  br label %33

33:                                               ; preds = %26, %13
  br label %34

34:                                               ; preds = %33
  %35 = load i32, i32* %5, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %5, align 4
  br label %10

37:                                               ; preds = %10
  %38 = load i64, i64* %4, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %37
  %41 = call i32 (...) @portYIELD_FROM_ISR()
  br label %42

42:                                               ; preds = %40, %37
  ret void
}

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @xSemaphoreGiveFromISR(i32, i64*) #1

declare dso_local i32 @portYIELD_FROM_ISR(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
